src/test/ui/span/issue-40157.stderr
error[E0597]: `foo` does not live long enough
  --> $DIR/issue-40157.rs:2:53
   |
LL |     {println!("{:?}", match { let foo = vec![1, 2]; foo.get(1) } { x => x });}
   |      -----------------------------------------------^^^----------------------
   |      |                                              |          |
   |      |                                              |          `foo` dropped here while still borrowed
   |      |                                              borrowed value does not live long enough
   |      borrowed value needs to live until here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
